--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ on:
   workflow_dispatch:
 
 env:
-  DOCKER_IMAGE: undertanker86/iris-ml-api
+  DOCKER_IMAGE: emkienngu123/iris-ml-api
   PYTHON_VERSION: '3.13'
 
 jobs:
@@ -53,7 +53,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
           
       - name: Build and Push Docker Image
